Fix border overlap on submenu

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -120,6 +120,7 @@ input[type=checkbox]:checked ~ #menu { display: block; }
     text-align: center;
     margin-top: -48px;
     background: #fff;
+    border-radius: 8px;
     position: relative;
 
     .active { 
